* new command "list-excludes" to list the exclude patterns in your Excludefile
* fixed bugs: 
		- broken exclude command
		- help function still shows the old options in the header line

=== 0.2.1 - 06.02.2012 ===
* etckeeper is split up in modules for better development
* etckeeper uses a new options style now. use help to find out
* the "add" command, formely knwon as the -f option can have more than one argument now
* the "add" command now when find a excluded file will include this file in the content.lst
* rewrote the help function
* rewrote the git_backp_single function
* rewrote the manual
* the script is a lot quieter now
* a new command reset enables the script to restore from last backup
	- this is stll not ready and you have to uncomment the #$rm file line in the reset_etc.sh module

=== 0.2.0 - 30.01.2012 ===
* moved etckeeper-ng out of bashtools
* functions check_root and check_tools are called before every option gets parsed
* etckeeper now works with the keeper.conf configuration file which is already 
  configured but also allows you to setup your own parameters seperate from the script
* A diff is used to log changes in files
* added file README
* added file CHANGELOG
* added file keeper.conf
* added file TODO
* added file BUGS

=== 0.1 Initial Release ===