@@ -2,6 +2,8 @@
 * fixed bugs: 
 		- broken exclude command
 		- help function still shows the old options in the header line
+		- when using exclude, already added exclude patterns will get added again
+		- output of rsync and git is more quite
 
 === 0.2.1 - 06.02.2012 ===
 * etckeeper is split up in modules for better development
